--- a/assets/stylish/global/grid/_grid.scss
+++ b/assets/stylish/global/grid/_grid.scss
@@ -1,6 +1,11 @@
 /* GRIDS LAYOUTS */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
+body{
+  @if $responsive != true{
+    min-width: $page_max_width;
+  }
+}
 
 /* Container */
 .container{
