--- a/assets/stylish/global/_mixins.scss
+++ b/assets/stylish/global/_mixins.scss
@@ -253,11 +253,11 @@
 
 /* Container size for responsive */
 @mixin container_size($max_width:$page_max_width, $value: $responsive){
-  @if $value == true{
+  //@if $value == true{
     width: 100%; max-width: $max_width;
-  } @else {
-    width: $page_max_width;
-  }
+  //} @else {
+  //  width: $page_max_width;
+  //}
 }
 
 /* Default container style */
