--- a/assets/stylish/global/grid/_grid_fixed_col.scss
+++ b/assets/stylish/global/grid/_grid_fixed_col.scss
@@ -29,31 +29,31 @@
 }
 
 
-
-@media screen and ($responsive_first: $screen_small) {
-
-  //Check if site uses responsive desig or not
-  @if $responsive == true{
-
-    /* Fixed sidebar grid hide sidebar */
-    .grid_fix{
-      .fluid_col,
-      .fixed_col{ margin: 0; float: none; width: 100%; position: static; height: auto }
-
-      /* Right Sidebar */
-      &.grid_fix_right{
-        .fluid_col{
-          .fluid_wrap{ margin-right: 0; padding-right: 0}
-        }
-      }
-
-      /* Left Sidebar */
-      &.grid_fix_left{
-        .fluid_col{
-          .fluid_wrap{ margin-left: 0; padding-left: 0; }
-        }
-      }
-    }
-
-  }
-}
+//
+//@media screen and ($responsive_first: $screen_small) {
+//
+//  //Check if site uses responsive design or not
+//  @if $responsive == true{
+//
+//    /* Fixed sidebar grid hide sidebar */
+//    .grid_fix{
+//      .fluid_col,
+//      .fixed_col{ margin: 0; float: none; width: 100%; position: static; height: auto }
+//
+//      /* Right Sidebar */
+//      &.grid_fix_right{
+//        .fluid_col{
+//          .fluid_wrap{ margin-right: 0; padding-right: 0}
+//        }
+//      }
+//
+//      /* Left Sidebar */
+//      &.grid_fix_left{
+//        .fluid_col{
+//          .fluid_wrap{ margin-left: 0; padding-left: 0; }
+//        }
+//      }
+//    }
+//
+//  }
+//}
