--- a/assets/stylish/global/_mixins.scss
+++ b/assets/stylish/global/_mixins.scss
@@ -362,7 +362,7 @@
 
   // icon
   .checkbox_icon {
-    width: $size;height: $size; margin-top: -$size/2; line-height: $size;
+    width: $size;height: $size; margin-top: -$size/2; line-height: $size_icon;
     &:before{@extend .sy_check:before; font-size: $size_icon; margin: (-$size_icon/2) 0 0 (-$size_icon/2); width: $size_icon; height: $size_icon;}
   }
 }
@@ -387,7 +387,7 @@
 
   // icon
   .radio_icon{
-    width: $size; height: $size; margin-top: -$size/2; line-height: $size;
+    width: $size; height: $size; margin-top: -$size/2; line-height: $size_icon;
     &:before{ content: ""; margin: (-$size_icon/2) 0 0 (-$size_icon/2); width: $size_icon; height: $size_icon; }
   }
 }
@@ -422,11 +422,12 @@
 }
 
 
-@mixin input_size( $height: false, $text_size: false, $padding_vertical:false, $padding_horizontal:false ){
-  @if $height     { height: $height; }
-  @if $text_size  { font-size: $text_size; }
-  @if $padding_vertical   { padding-top:$padding_vertical; padding-bottom: $padding_vertical; }
-  @if $padding_horizontal { padding-left:$padding_horizontal; padding-right: $padding_horizontal; }
+@mixin input_size( $height: false, $text_size: false, $line_height:false, $padding_vertical:false, $padding_horizontal:false ){
+  @if $height             { height: $height; }
+  @if $text_size          { @include rem(font-size, $text_size); }
+  @if $line_height        { @include rem(line-height, $line_height); }
+  @if $padding_vertical   { @include rem(padding-top, $padding_vertical); @include rem(padding-bottom, $padding_vertical); }
+  @if $padding_horizontal { @include rem(padding-left, $padding_horizontal); @include rem(padding-right, $padding_horizontal); }
 }
 
 
@@ -434,14 +435,14 @@
 
 
 //Button size
-@mixin btn_size($padding_vertical:false, $padding_horizontal:false, $font_size:false, $line_height:false){
-  @if $padding_vertical   { padding-top:$padding_vertical; padding-bottom: $padding_vertical; }
-  @if $padding_horizontal { padding-left:$padding_horizontal; padding-right: $padding_horizontal; }
+@mixin btn_size($height: false, $padding_vertical:false, $padding_horizontal:false, $font_size:false, $line_height:false){
+  @if $height             { @include rem(height, $height); }
+  @if $padding_vertical   { @include rem(padding-top, $padding_vertical); @include rem(padding-bottom, $padding_vertical); }
+  @if $padding_horizontal { @include rem(padding-left, $padding_horizontal); @include rem(padding-right, $padding_horizontal); }
   @if $font_size          { @include rem(font-size, $font_size); }
   @if $line_height        { @include rem(line-height, $line_height); }
-
-
 }
+
 
 //Default button style
 @mixin btn_style($text_transform: false, $font_family:false, $radius:false, $border_width:false, $border_style:false,$text_align:false, $width:false, $font_weight:false, $display:false, $white_space:false, $text_decoration: false, $cursor:false, $margin:false){
